# iris

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.backend-dev.yml  docker-compose.backend-embedded.yml  docker-compose.backend-external.yml  docker-compose.yml  mkdocs.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  iris.service  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260310_000001_initial_schema.py  20260311_000007_analytics_layer.py  20260311_000008_unify_history_storage.py  20260311_000011_coin_metrics_regime_details.py  20260311_000012_investment_decisions.py  20260311_000015_data_architecture_foundation.py  20260311_000018_signal_fusion_engine.py  20260311_000019_portfolio_engine.py  20260311_000020_cross_market_prediction.py  20260312_000022_news_source_plugins.py  20260312_000024_market_structure_snapshots.py  20260312_000025_market_structure_sources.py  20260312_000026_market_structure_source_health.py
backend/app/: main.py
backend/app/analysis/: __init__.py  cross_market_engine.py  prediction_memory_engine.py  signal_fusion_engine.py
backend/app/api/: __init__.py  backtests.py  coins.py  decisions.py  final_signals.py  history.py  market.py  market_decisions.py  metrics.py  patterns.py  portfolio.py  predictions.py  sectors.py  signals.py  strategies.py  system.py
backend/app/apps/: __init__.py
backend/app/core/: config.py  watched_assets.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/events/: __init__.py  consumer.py  publisher.py  runner.py  types.py  workers.py
backend/app/exchanges/: __init__.py  base.py  binance.py  bybit.py  registry.py
backend/app/messaging/: __init__.py  bus.py
backend/app/models/: __init__.py  candle.py  coin.py  coin_metrics.py  coin_relation.py  discovered_pattern.py  exchange_account.py  feature_snapshot.py  final_signal.py  indicator_cache.py  investment_decision.py  market_cycle.py  market_decision.py  market_prediction.py  pattern_feature.py  pattern_registry.py  pattern_statistic.py  portfolio_action.py  portfolio_balance.py  portfolio_position.py  portfolio_state.py  prediction_result.py  risk_metric.py  sector.py  sector_metric.py  signal.py  signal_history.py  strategy.py  strategy_performance.py  strategy_rule.py
backend/app/patterns/: __init__.py  base.py  clusters.py  context.py  cycle.py  decision.py  discovery.py  engine.py  evaluation.py  hierarchy.py  lifecycle.py  narrative.py  pattern_context.py  regime.py  registry.py  risk.py  scheduler.py  semantics.py  statistics.py  strategy.py  success.py  utils.py
backend/app/portfolio/: engine.py
backend/app/runtime/: __init__.py
backend/app/schemas/: backtest.py  coin.py  coin_metrics.py  decision.py  final_signal.py  market_cycle.py  market_decision.py  market_flow.py  market_radar.py  pattern.py  portfolio.py  prediction.py  price_history.py  sector.py  signal.py  strategy.py
backend/app/services/: analytics_events.py  analytics_service.py  backtests_service.py  candles_service.py  correlation_cache.py  decision_cache.py  decisions_service.py  feature_snapshots_service.py  final_signals_service.py  history_loader.py  market_decisions_service.py  market_flow_service.py  market_radar_service.py  metrics_service.py  patterns_service.py  portfolio_cache.py  portfolio_service.py  prediction_cache.py  predictions_service.py  regime_cache.py  signal_history_service.py  strategies_service.py
backend/app/taskiq/: __init__.py  broker.py  dispatcher.py  locks.py
backend/app/tasks/: __init__.py  analytics_tasks.py  cross_market_tasks.py  history_tasks.py  metrics_tasks.py  pattern_tasks.py  portfolio_tasks.py
backend/iris/: __init__.py  main.py
backend/iris/api/: __init__.py  router.py
backend/iris/apps/: ai_prompt_registry.py
backend/openapi/: openapi-full.json  openapi-ha-addon.json
backend/scripts/: check_http_capabilities.py  check_http_matrix.py  check_i18n_catalogs.py  check_openapi.py  export_http_capabilities.py  export_http_matrix.py  export_i18n_coverage.py  export_openapi.py  export_service_layer_scorecard.py
backend/src/: main.py
backend/src/api/: __init__.py  router.py
backend/src/apps/: __init__.py  ai_prompt_registry.py
backend/src/migrations/: env.py
backend/tests/: conftest.py  cross_market_support.py  fusion_support.py  market_data_support.py  patterns_support.py  portfolio_support.py  test_auto_watch_feature.py  test_correlation_detection.py  test_cross_market_engine.py  test_event_stream.py  test_exchange_plugin_registry.py  test_market_regime.py  test_multi_worker_stream.py  test_pattern_context.py  test_pattern_evaluation_job.py  test_pattern_statistics.py  test_pattern_success_engine.py  test_portfolio_engine.py  test_portfolio_sync_worker.py  test_position_sizing.py  test_prediction_evaluation.py  test_prediction_feedback.py  test_prediction_memory_engine.py  test_regime_adjustment.py  test_risk_management.py  test_scheduler.py  test_sector_momentum.py  test_signal_conflict.py  test_signal_fusion.py  worker_helpers.py
backend/tests/apps/: conftest.py
backend/tests/architecture/: conftest.py  service_layer_baseline.py  service_layer_policy.py  service_layer_scorecard.py  test_cross_domain_boundaries.py  test_engine_purity.py  test_runtime_wrapper_service_surfaces.py  test_service_constructor_dependencies.py  test_service_layer_adrs.py  test_service_layer_performance_budgets_doc.py  test_service_layer_runtime_policies_doc.py  test_service_layer_scorecard.py  test_service_module_thresholds.py  test_service_result_contracts.py  test_transport_leakage.py
backend/tests/core/: test_bootstrap_db_main.py  test_error_registry.py  test_http_capabilities.py  test_http_locale.py  test_http_matrix.py  test_http_operation_store.py  test_i18n.py  test_i18n_context.py  test_i18n_descriptors.py  test_i18n_presentation.py  test_i18n_validators.py  test_operation_localization.py  test_settings.py  (+1 more)
(+1870 files in other folders)
