[project]
name = "iris-backend"
version = "0.1.0"
description = "IRIS backend service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.122.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "psycopg[binary]>=3.1.19,<4.0.0",
    "pydantic-settings>=2.3.3,<3.0.0",
    "taskiq>=0.11.18,<1.0.0",
    "taskiq-redis>=1.0.0,<2.0.0",
    "redis>=5.2.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "telethon>=1.37.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "polyfactory>=2.18.1,<3.0.0",
    "faker>=37.0.0,<38.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.uv]
package = false
