[project]
name = "iris-backend"
version = "0.1.0"
description = "IRIS backend service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.122.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "psycopg[binary]>=3.1.19,<4.0.0",
    "pydantic-settings>=2.3.3,<3.0.0",
    "taskiq>=0.11.18,<1.0.0",
    "taskiq-redis>=1.0.0,<2.0.0",
    "redis>=5.2.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "telethon>=1.37.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "polyfactory>=2.18.1,<3.0.0",
    "deptry>=0.23.1,<1.0.0",
    "faker>=37.0.0,<38.0.0",
    "bandit>=1.8.3,<2.0.0",
    "import-linter>=2.11,<3.0.0",
    "mypy>=1.18.2,<2.0.0",
    "pip-audit>=2.9.0,<3.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "eradicate>=3.0.1,<4.0.0",
    "semgrep>=1.155.0,<2.0.0",
    "tryceratops>=2.4.1,<3.0.0",
    "vulture>=2.14,<3.0.0",
    "xenon>=0.9.3,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]
extend-exclude = ["src/migrations"]

[tool.ruff.lint]
select = ["E9", "F811", "F821", "F822", "F823", "B", "I", "UP", "SIM", "C4", "RET", "RUF", "PERF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
pretty = true
warn_unused_configs = true

[tool.deptry]
known_first_party = ["src"]

[tool.importlinter]
root_package = "src"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Enforce backend layer boundaries"
type = "layers"
layers = ["runtime", "apps", "core"]
containers = ["src"]
exhaustive = true
exhaustive_ignores = ["main", "migrations"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.uv]
package = false
