[project]
name = "iris-backend"
version = "0.1.0"
description = "IRIS backend service"
requires-python = ">=3.14.2,<3.15"
dependencies = [
    "fastapi>=0.122.0,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "starlette>=0.52.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "psycopg[binary]>=3.1.19,<4.0.0",
    "pydantic-settings>=2.3.3,<3.0.0",
    "taskiq>=0.11.18,<1.0.0",
    "taskiq-redis>=1.0.0,<2.0.0",
    "redis>=5.2.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "telethon>=1.37.0,<2.0.0",
    "pyyaml>=6.0.3,<7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "testcontainers[postgres,redis]>=4.13.2,<5.0.0",
    "polyfactory>=2.18.1,<3.0.0",
    "deptry>=0.23.1,<1.0.0",
    "faker>=37.0.0,<38.0.0",
    "bandit>=1.8.3,<2.0.0",
    "import-linter>=2.11,<3.0.0",
    "mypy>=1.18.2,<2.0.0",
    "types-PyYAML>=6.0.12.20250915,<7.0.0",
    "pip-audit>=2.9.0,<3.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "eradicate>=3.0.1,<4.0.0",
    "semgrep>=1.155.0,<2.0.0",
    "tryceratops>=2.4.1,<3.0.0",
    "vulture>=2.14,<3.0.0",
    "xenon>=0.9.3,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["iris", "tests"]
extend-exclude = ["iris/migrations"]

[tool.ruff.lint]
select = ["E9", "F811", "F821", "F822", "F823", "B", "I", "UP", "SIM", "C4", "RET", "RUF", "PERF"]
ignore = ["B008", "PERF401", "RUF012", "UP010"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
pretty = true
warn_unused_configs = true

[tool.deptry]
known_first_party = ["iris"]

[tool.importlinter]
root_package = "iris"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Enforce backend layer boundaries"
type = "layers"
layers = ["api", "runtime", "apps", "core"]
containers = ["iris"]
exhaustive = true
exhaustive_ignores = ["main", "migrations"]
ignore_imports = [
    "iris.apps.*.tasks -> iris.runtime.orchestration.broker",
    "iris.apps.*.tasks -> iris.runtime.orchestration.locks",
    "iris.apps.*.tasks.* -> iris.runtime.orchestration.broker",
    "iris.apps.*.tasks.* -> iris.runtime.orchestration.locks",
    "iris.apps.market_data.sources.* -> iris.runtime.orchestration.locks",
    "iris.apps.*.services -> iris.runtime.streams.publisher",
    "iris.apps.*.services.* -> iris.runtime.streams.publisher",
    "iris.apps.*.pipeline -> iris.runtime.streams.publisher",
    "iris.apps.*.polling -> iris.runtime.streams.publisher",
    "iris.apps.*.support -> iris.runtime.streams.publisher",
    "iris.apps.patterns.domain.success -> iris.runtime.streams.publisher",
    "iris.apps.control_plane.control_events -> iris.runtime.streams.publisher",
    "iris.apps.anomalies.detection_runner -> iris.runtime.streams.publisher",
    "iris.apps.*.consumers -> iris.runtime.streams.types",
    "iris.apps.*.consumers.* -> iris.runtime.streams.types",
    "iris.apps.anomalies.consumers.* -> iris.runtime.orchestration.dispatcher",
    "iris.apps.*.api.stream_adapter -> iris.runtime.streams.types",
    "iris.apps.integrations.ha.bridge.* -> iris.runtime.streams.consumer",
    "iris.apps.integrations.ha.bridge.* -> iris.runtime.streams.types",
    "iris.apps.integrations.ha.application.services -> iris.runtime.streams.types",
    "iris.apps.control_plane.cache -> iris.runtime.streams.types",
    "iris.apps.market_data.services -> iris.runtime.streams.messages",
    "iris.apps.patterns.task_service_decisions -> iris.runtime.streams.messages",
    "iris.apps.notifications.services.notification_service -> iris.runtime.streams.types",
    "iris.apps.hypothesis_engine.services.hypothesis_service -> iris.runtime.streams.types",
    "iris.core.bootstrap.* -> iris.apps.**",
    "iris.core.bootstrap.* -> iris.runtime.**",
    "iris.core.bootstrap.app -> iris.api.router",
    "iris.core.http.openapi -> iris.api.**",
]

[tool.coverage.run]
branch = true
source = ["iris"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.uv]
package = false
